<resources>
    <string name="app_name">Quizz App</string>
    <string name="historical_facts">Historical Facts</string>
    <string name="wwi_happened_in">WWI happened in?</string>
    <string name="astronaut_who_went_to_moon_before_appolo_mission">Astronaut who went to moon before Appolo Mission</string>
    <string name="buzz_aldrin">Buzz Aldrin</string>
    <string name="neil_armstrong">Neil Armstrong</string>
    <string name="chuck_norris">Chuck Norris</string>
    <string name="when_alexander_graham_bell_invented_the_telephone_he_had_three_missed_calls_from">When Alexander Graham Bell invented the telephone he had three missed calls from</string>
    <string name="type_your_answer_here">Type your Answer Here</string>
    <string name="submit">submit</string>
    <string name="_1900">1900</string>
    <string name="_1914">1914</string>
    <string name="_1915">1915</string>
    <string name="_1918">1918</string>
    <string name="_21900">1937</string>
    <string name="_21914">1943</string>
    <string name="_21915">1945</string>
    <string name="wwii_happened_in">WWII happened in?</string>
</resources>
